	* Refactored socket code in 'common/routing.cpp',
	'common/routing.h' and 'common/rtp.cpp' so as to handle
	subscriptions properly under OS X.
2014-07-08 Fred Gleason <fredg@paravelsystems.com>
	* Fixed a bug in 'configure.ac' that failed to detect certain
	versions of OS X.
2014-07-08 Fred Gleason <fredg@paravelsystems.com>
	* Fixed a bug in 'get_distro.sh' that failed to detect OS X
	correctly.
2014-07-08 Fred Gleason <fredg@paravelsystems.com>
	* Incremented the package version to 0.6.2.
2014-07-10 Fred Gleason <fredg@paravelsystems.com>
	* Added code to create the cache directory automatically.
2014-07-10 Fred Gleason <fredg@paravelsystems.com>
	* Commented out debug code in 'routing.cpp'.
2014-07-10 Fred Gleason <fredg@paravelsystems.com>
	* Incremented the package version to 0.6.3.
2014-07-20 Fred Gleason <fredg@paravelsystems.com>
	* Added a 'GpioServer' class in 'common/gpio_server.cpp' and
	'common/gpio_server.h'.
	* Added code in 'syd/syd.cpp' and 'syd/syd.h' to forward GPI
	events along with RTP audio.
2014-07-30 Fred Gleason <fredg@paravelsystems.com>
	* Added a 'Ringbuffer' class in 'common/ringbuffer.cpp' and
	'common/ringbuffer.h'.
2014-07-30 Fred Gleason <fredg@paravelsystems.com>
	* Incremented the package version to 0.6.4.
2014-08-01 Fred Gleason <fredg@paravelsystems.com>
	* Renamed the 'GpioServer::sendGpi()' method to
	'GpioServer::sendGpo()' in 'common/gpio_server.cpp' and
	'common/gpio_server.h'.
	* Renamed the 'GpioServer::gpiReceived()' signal to
	'GpioServer::gpoReceived()' in 'common/gpio_server.cpp' and
	'common/gpio_server.h'.
2014-08-01 Fred Gleason <fredg@paravelsystems.com>
	* Added a 'GpioServer::sendGpi()' method in 'common/gpio_server.cpp'
	and 'common/gpio_server.h'.
	* Added a 'GpioServer::gpiReceived()' signal in
	 'common/gpio_server.cpp' and 'common/gpio_server.h'.
2014-08-01 Fred Gleason <fredg@paravelsystems.com>
	* Refactored classes in 'common' into a 'libswitchyard' library.