@@ -1,0 +1,11 @@
+prefix=@prefix@
+exec_prefix=@exec_prefix@
+libdir=@libdir@
+includedir=${prefix}/include
+
+Name: Switchyard
+Description: AES67 Control and Conveience Library
+Version: @VERSION@
+Requires: QtCore QtNetwork
+Libs: -L${libdir} -lSwitchyard
+Cflags: -I${includedir} -I/usr/include
