@@ -18,8 +18,8 @@ moc_%.cpp:	%.h
 clean-local:	
 	rm -rf debug release
 
-lib_LTLIBRARIES = libswitchyard.la
-dist_libswitchyard_la_SOURCES = syadv_packet.cpp syadv_packet.h\
+lib_LTLIBRARIES = libSwitchyard.la
+dist_libSwitchyard_la_SOURCES = syadv_packet.cpp syadv_packet.h\
                                 syadv_reader.cpp syadv_reader.h\
                                 syadv_server.cpp syadv_server.h\
                                 syadv_source.cpp syadv_source.h\
@@ -36,7 +36,7 @@ dist_libswitchyard_la_SOURCES = syadv_packet.cpp syadv_packet.h\
                                 syrouting.cpp syrouting.h\
                                 syrtp_server.cpp syrtp_server.h
 
-nodist_libswitchyard_la_SOURCES = moc_syadv_server.cpp\
+nodist_libSwitchyard_la_SOURCES = moc_syadv_server.cpp\
                                   moc_sygpio_server.cpp\
                                   moc_sylwrp_server.cpp\
                                   moc_syrtp_server.cpp
@@ -58,7 +58,7 @@ include_HEADERS = syadv_packet.h\
                   syrouting.h\
                   syrtp_server.h
 
-libswitchyard_la_LDFLAGS = -version-info $(INTERFACE_CURRENT):$(INTERFACE_REVISION):$(INTERFACE_AGE)
+libSwitchyard_la_LDFLAGS = -version-info $(INTERFACE_CURRENT):$(INTERFACE_REVISION):$(INTERFACE_AGE)
 
 CLEANFILES = *~\
              *.idb\
